fix: updated text align for description

--- a/src/components/Popup/popup.css
+++ b/src/components/Popup/popup.css
@@ -47,6 +47,10 @@
   .popup-done-button:hover {
     background-color: #0056b3;
   }
+
+  .description {
+    text-align: left;
+  }
   
   @keyframes fadeIn {
     from {
